<resources>

    <!--  App Name  -->
    <string name="app_name">Mobile News App</string>

    <!--  Categories  -->
    <string name="category_list_screen_big_title">Welcome Back!</string>
    <string name="category_list_screen_title">Choose Category</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <!--  Search  -->
    <string name="search_logo">Search bar</string>
    <string name="search_hint">Search here …</string>

    <!--  Sources  -->
    <string name="source_list_screen_title">List of Source</string>

    <!--  Articles  -->
    <string name="article_list_screen_title">List of Articles</string>
    <string name="article_detail_screen_title">Article Detail</string>
    <string name="contents">Contents</string>
    <string name="read_more">Read more</string>
    <string name="headline">Headline</string>

    <!--  Error & Warning  -->
    <string name="warning_logo">Warning</string>
    <string name="empty_state_message">Could’t found any sources</string>
    <string name="empty_article_state_message">Could’t found any articles</string>
    <string name="no_internet_access_state_message">An error occurred.\nClick here to refresh</string>
    <string name="loading_state_message">Please Wait …</string>

    <!--  Navigation  -->
    <string name="back">Back</string>
    <string name="retry">Retry</string>

</resources>