<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="36dp"
    tools:context=".ui.source_list.SourceListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_category_title"
            style="@style/SemiBold24Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:clipToPadding="false"
            tools:text="Category Title" />

    </LinearLayout>

    <EditText
        style="@style/Regular14Sp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_radius_16dp"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp" />

    <TextView
        style="@style/Medium16Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:text="@string/source_list_screen_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_source_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/item_source" />

</LinearLayout>