<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:foreground="@drawable/bg_card"
    app:cardBackgroundColor="@color/light_secondary"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/iv_headline"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/headline"
            android:paddingHorizontal="16dp"
            android:scaleType="fitXY"
            tools:src="@drawable/dummy_headline" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Medium12Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp"
            tools:text="Ex-Prigozhin Aide to Oversee Volunteer Fighters in Ukraine – Kremlin - The Moscow Times" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/light_disabled" />

        <TextView
            style="@style/Medium12Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp"
            android:text="@string/contents" />

        <TextView
            android:id="@+id/tv_content"
            style="@style/Regular12Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="16dp"
            tools:text="Russian President Vladimir Putin has tasked a former aide of late Wagner chief Yevgeny Prigozh..." />

        <TextView
            style="@style/Medium12Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            android:text="@string/read_more"
            android:textColor="@color/color_primary" />

    </LinearLayout>

</androidx.cardview.widget.CardView>