<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.category_list.CategoryListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingVertical="36dp">

        <TextView
            style="@style/SemiBold24Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="24dp"
            android:text="@string/category_list_screen_big_title" />

        <TextView
            style="@style/Medium16Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingHorizontal="24dp"
            android:text="@string/category_list_screen_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_business"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/business"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_business" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_entertainment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/entertainment"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_entertainment" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_general"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/general"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_general" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/health"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_health" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_science"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/science"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_science" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_sports"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/sports"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_sport" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_technology"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:foreground="@drawable/bg_card"
                app:cardBackgroundColor="@color/light_secondary"
                app:cardCornerRadius="8dp">

                <TextView
                    style="@style/SemiBold14Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:paddingVertical="16dp"
                    android:text="@string/technology"
                    android:textColor="@color/color_primary"
                    app:drawableTopCompat="@drawable/ic_category_technology" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>